--- a/style.css
+++ b/style.css
@@ -38,7 +38,14 @@ body > canvas:focus{
 .border{
     width:50px;
     height:50px;
-    background:red;
+    background:blue;
+}
+
+.void{
+    width:50px;
+    height:50px;
+    border-style: solid;
+    border-color: red;
 }
 
 #allGerturds{
