--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ body > canvas:focus{
     border-color: red;
 }
 
+.homeWall{
+    width:50px;
+    height:50px;
+    background:yellow;
+}
+
 #allGerturds{
     display:grid;
     grid-template-columns: repeat(2, 1fr);
