--- a/frontend/style.css
+++ b/frontend/style.css
@@ -106,7 +106,7 @@ body > canvas:focus{
     background-size: contain;
 }
 
-.cookie{
+.lamai_cookie{
     width: 30px;
     height: 30px;
     background: orange;
